@@ -98,52 +98,59 @@ class RepoHoldingsLoaderTests(unittest.TestCase):
             #
             dList = rhdp.getHoldingsUpdate(updateId=self.__updateId)
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_UPDATE', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList), ok))
             self.assertTrue(ok)
             #
             dList = rhdp.getHoldingsCurrent(updateId=self.__updateId)
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_CURRENT', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList), ok))
             self.assertTrue(ok)
 
             dList = rhdp.getHoldingsUnreleased(updateId=self.__updateId)
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_UNRELEASED', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList,
+                         indexAttributeList=['update_id', 'entry_id'], keyNames=None)
+            logger.info("Collection %r length %d load status %r" % (collectionName, len(dList), ok))
+            self.assertTrue(ok)
+            #
+            dList = rhdp.getHoldingsPrerelease(updateId=self.__updateId)
+            collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_PRERELEASE', sectionName=sectionName) + '_' + collectionVersion
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList), ok))
             self.assertTrue(ok)
             #
             dList1, dList2, dList3 = rhdp.getHoldingsRemoved(updateId=self.__updateId)
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_REMOVED', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList1,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList1,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList1), ok))
             self.assertTrue(ok)
 
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_REMOVED_AUTHORS', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList2,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList2,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList2), ok))
             #
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_SUPERSEDED', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList3,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList3,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList3), ok))
             #
             #
             dList1, dList2 = rhdp.getHoldingsTransferred(updateId=self.__updateId)
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_TRANSFERRED', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList1,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList1,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList1), ok))
             self.assertTrue(ok)
 
             collectionName = self.__cfgOb.get('COLLECTION_HOLDINGS_INSILICO_MODELS', sectionName=sectionName) + '_' + collectionVersion
-            ok = dl.load(databaseName, collectionName, loadType='append', documentList=dList2,
+            ok = dl.load(databaseName, collectionName, loadType='full', documentList=dList2,
                          indexAttributeList=['update_id', 'entry_id'], keyNames=None)
             logger.info("Collection %r length %d load status %r" % (collectionName, len(dList2), ok))
 
